--- a/impossible-memory-game/src/App.css
+++ b/impossible-memory-game/src/App.css
@@ -1,9 +1,17 @@
+body {
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
+  background: url(https://cms-tc.pbskids.org/lunawebsite/resources/assets/img/games/bg.jpg)
+    no-repeat center center;
 }
 
 .App-header {
-  background-color: #282c34;
+  /*background-color: #282c34;*/
+  background: url(https://cms-tc.pbskids.org/lunawebsite/resources/assets/img/bg-links.png)
+    no-repeat center center;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -11,4 +19,84 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.gameboard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 5%;
+}
+
+.cardimg {
+  width: 100%;
+  height: 100%;
+}
+
+.frontimg {
+  width: 50%;
+  height: 50%;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 250px;
+  height: 300px;
+  margin-bottom: 1%;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transform-origin: center right;
+  transition: transform 1s;
+}
+
+.flipcard:active .flip-card-inner {
+  transform: translateX(-100%) rotateY(180deg);
+  animation-fill-mode: forwards;
+}
+
+/*.flip-card-inner.flipcard {
+  transform: translateX(-100%) rotateY(180deg);
+}
+.flipcard.flip-card-inner {
+  transform: translateX(-100%) rotateY(180deg);
+}*/
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /*-webkit-backface-visibility: hidden;*/
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background: url(https://cms-tc.pbskids.org/lunawebsite/resources/assets/img/bg-sponsor.png)
+    no-repeat top center;
+  color: white;
+}
+
+.flip-card-back {
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.start {
+  margin: 3% 0;
+  padding: 1%;
+  border-radius: 30%;
+  color: rgb(21, 94, 94);
+}
+
+.start:hover {
+  color: white;
+  background-color: rgb(21, 94, 94);
 }
